--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.0.0",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
     "karma": "~6.4.0",
@@ -43,6 +45,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ts-jest": "^29.1.1",
     "typescript": "~5.2.2"
   }
 }
