--- a/angular.json
+++ b/angular.json
@@ -78,7 +78,7 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-devkit/build-angular:",
           "options": {
             "polyfills": [
               "zone.js",
