--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.0",
+    "axios": "^1.6.7",
     "express": "^4.18.2",
     "ip": "^2.0.1",
+    "jsonwebtoken": "^9.0.2",
     "ngx-infinite-scroll": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "undici": "^6.7.1",
+    "vite": "^5.1.6",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
